solution:created body part fragment fragment_body_part.xml FragmentBodyPart.java

--- a/app/src/main/res/layout/activity_android_me.xml
+++ b/app/src/main/res/layout/activity_android_me.xml
@@ -32,6 +32,24 @@
         <!-- TODO (4) Create a container to hold the head BodyPartFragment of the custom Android -->
         <!--The container should be 180dp in height -->
 
+<FrameLayout
+    android:id="@+id/head_body_part"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+
+    />
+        <FrameLayout
+            android:id="@+id/body_body_part"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+
+            />
+        <FrameLayout
+            android:id="@+id/legs_body_part"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+
+            />
 
 
     </LinearLayout>
